
  From Christian Neeb:

  - Fix the Java parser's handling of string definitions to avoid ignoring
    subsequent code.

  From Han-Wen Nienhuys:

  - Optimize variable expansion by:  using the re.sub() method (when
    possible); not using "eval" for variables for which we can fetch the
    value directory; avoiding slowing substitution logic when there's no
    '$' in the string.

  From Greg Noel:

  - Add construction variables to support frameworks on Mac OS X:
    $FRAMEWORKS, $FRAMEWORKPREFIX, $FRAMEWORKPATH, $FRAMEWORKPATHPREFIX.

  - Re-order link lines so the -o option always comes right after the
    command name.

  - Add /sw/bin to the default execution PATH on Mac OS X.

  From Gary Oberbrunner:

  - Add an Environment.Dump() method to print the contents of a
    construction environment.

  - Allow $LIBS (and similar variables) to contain explicit File Nodes.

  - Change ParseConfig to add the found library names directly to the
    $LIBS variable, instead of returning them.

  - Add ParseConfig() support for the -framework GNU linker option.

  - Add a PRINT_CMD_LINE_FUNC construction variable to allow people
    to filter (or log) command-line output.

  - Print an internal Python stack trace in response to an otherwise
    unexplained error when --debug=stacktrace is specified.

  - Add a --debug=findlibs option to print what's happening when
    the scanner is searching for libraries.

  - Allow Tool specifications to be passed a dictionary of keyword
    arguments.

  - Support an Options default value of None, in which case the variable
    will not be added to the construction environment unless it's set
    explicitly by the user or from an Options file.

  - Avoid copying __builtin__ values into a construction environment's
    dictionary when evaluating construction variables.

  - Add a new cross-platform intelc.py Tool that can detect and
    configure the Intel C++ v8 compiler on both Windows, where it's